# try-python

./: .gitignore  README.md  pyproject.toml
try_python/try_enum/: custom_enum.py  test_custom_enum.py
try_typer/: print_args.py
