[tool.poetry]
name = "try-python"
version = "0.1.0"
description = "Codes for trying Python"
authors = ["Jooeon Kim <joo2theeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
